# luana_menezes_embarcatech_HBr_2025

./: README.md
projects/galton_board/: README.md
projects/week_6_microcontroler_programming/src/decreasing_counter/: CMakeLists.txt  decreasing_counter.c
projects/week_6_microcontroler_programming/src/decreasing_counter/src/: ssd1306_i2c.c
projects/week_6_microcontroler_programming/src/joystick_reader/: CMakeLists.txt  joystick_reader.c
projects/week_6_microcontroler_programming/src/joystick_reader/inc/: ssd1306_font.h  ssd1306_i2c.h
projects/week_6_microcontroler_programming/src/temperature_reader/: CMakeLists.txt  temperature_reader.c
projects/week_7_microcontroler_programming/src/blink/: CMakeLists.txt
projects/week_7_microcontroler_programming/src/blink/app/: main.c
projects/week_7_microcontroler_programming/src/blink/drivers/: driver_led_builtin.c
projects/week_7_microcontroler_programming/src/blink/hal/: hal_led_builtin.c
projects/week_7_microcontroler_programming/src/blink/include/: driver_led_builtin.h  hal_led_bultin.h
projects/week_7_microcontroler_programming/src/temperature_reader/: CMakeLists.txt  temperature_reader.c  temperature_reader.h
projects/week_7_microcontroler_programming/src/temperature_reader/tests/: CMakeLists.txt  test_temperature_reader.c
